--- a/res/layout/appupdate_progress.xml
+++ b/res/layout/appupdate_progress.xml
@@ -2,7 +2,8 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:padding="20dp">
 	<ProgressBar
 		android:id="@+id/update_progress"
 		android:layout_width="fill_parent"
